--- a/index.html
+++ b/index.html
@@ -4,18 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Online Shopping mall</title>
 </head>
-<body>
+<body>  
     <!-- Logo -->
-    <header></header>
-
+    <img src="./img/logo.png" alt="Logo" class="logo">
+    
     <!-- Buttons -->
-    <nav></nav>
+    <nav class="buttons">
+        <button class="btn">
+            <img class="img-btn" src="./img/blue_t.png" alt="tshirt">
+        </button>
+        <button class="btn">
+            <img class="img-btn" src="./img/blue_p.png" alt="pants">
+        </button>
+        <button class="btn">
+            <img class="img-btn" src="./img/blue_s.png" alt="skirt">
+        </button>
+        <button class="btn color-btn blue">Blue</button>
+        <button class="btn color-btn yellow">Yellow</button>
+        <button class="btn color-btn pink">Pink</button>
+    </nav>
 
     <!-- Items -->
-    <section></section>
+    <ul class="items">
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <!-- <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li>
+        <li class="item">
+            <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
+            <span class="item-description">male, large</span>
+        </li> -->
+
+    </ul>
+    
 
     <script src="./main.js"></script>
 </body>
