🚧 Import main.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script src="./src/main.js"></script>
     <title>Online Shopping mall</title>
 </head>
 <body>  
@@ -79,11 +80,7 @@
         <li class="item">
             <img class="item-thumbnail" src="./img/blue_t.png" alt="blue tshirt" />
             <span class="item-description">male, large</span>
-        </li> -->
-
+        </li> -->    
     </ul>
-    
-
-    <script src="./main.js"></script>
 </body>
 </html>
